Updated components, added OTP module and CSV files

--- a/angular.json
+++ b/angular.json
@@ -94,7 +94,10 @@
 
 
             ],
-            "scripts": []
+           "scripts": [
+  "https://checkout.razorpay.com/v1/checkout.js"
+]
+
           }
         }
       }
